syntax = "proto2";

//package google.protobuf;
//option csharp_namespace = "Jess.Sample.GoogleProtoBuf";

//or

package Jess.Sample.GoogleProtoBuf;

message Test {
  optional   int32 ID = 1;
  optional   string Name = 2;
}

message TestComplex {
 optional    int32 ID = 1;
 optional    string Name = 2;

 optional    string Str = 3;
    required string Str_Req=4;

optional     bool is_true=5;
    required bool Is_True_Req=6;

 optional    TestEnumType TestEnum=7;
    required TestEnumType TestEnum_Req=8;

    repeated TestItem Items=9;
}

enum TestEnumType {
    First = 0;
    Second = 1;
    Third = 2;
}

message TestItem{
    optional int32 ID=1;
    optional string Item=2;
}
    